[package]
name = "openxr-stardust"
version = "0.1.0"
edition = "2021"

[lib]
name = "openxr_stardust"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.66"
bytemuck = "1.12.1"
nanoid = "0.4.0"
openxr-sys = { version = "0.9.3", features = ["linked", "mint"] }
serde = { version = "1.0.147", features = ["derive"] }
stardust-xr = "0.7.1"
tokio = { version = "1.21.2", features = ["rt", "macros", "time"], default-features = false }
